--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
+    "styled-css-grid": "^1.2.1",
     "yup": "^0.27.0"
   },
   "scripts": {
