--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "formik": "^1.5.7",
     "js-cookie": "^2.2.0",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
@@ -46,6 +47,13 @@
     ]
   },
   "devDependencies": {
-    "@storybook/react": "^5.1.9"
+    "@storybook/react": "^5.1.9",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.2",
+    "prettier": "^1.18.2"
   }
 }
