--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.4.3",
     "bootstrap": "^4.3.1",
     "formik": "^1.5.7",
+    "graphql": "^14.4.2",
     "js-cookie": "^2.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "rc-time-picker": "^3.7.1",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
