--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "js-cookie": "^2.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
+    "rc-time-picker": "^3.7.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
@@ -21,7 +22,6 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
-    "styled-css-grid": "^1.2.1",
     "yup": "^0.27.0"
   },
   "scripts": {
