--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "date-fns": "^1.30.1",
     "formik": "^1.5.7",
     "js-cookie": "^2.2.0",
     "path": "^0.12.7",
@@ -11,6 +12,7 @@
     "rc-time-picker": "^3.7.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-places-autocomplete": "^7.2.1",
