--- a/package.json
+++ b/package.json
@@ -3,31 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.3",
-    "bootstrap": "^4.3.1",
-    "date-fns": "^1.30.1",
-    "formik": "^1.5.7",
-    "graphql": "^14.4.2",
-    "js-cookie": "^2.2.0",
-    "path": "^0.12.7",
-    "prop-types": "^15.7.2",
-    "rc-time-picker": "^3.7.1",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.8",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-day-picker": "^7.3.0",
-    "react-dom": "^16.8.6",
-    "react-google-maps": "^9.4.5",
-    "react-places-autocomplete": "^7.2.1",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "apollo-boost": "~0.4.3",
+    "bootstrap": "~4.3.1",
+    "date-fns": "~1.30.1",
+    "formik": "~1.5.7",
+    "graphql": "~14.4.2",
+    "path": "~0.12.7",
+    "prop-types": "~15.7.2",
+    "rc-time-picker": "~3.7.1",
+    "react": "~16.8.6",
+    "react-apollo": "~2.5.8",
+    "react-bootstrap": "~1.0.0-beta.9",
+    "react-day-picker": "~7.3.0",
+    "react-dom": "~16.8.6",
+    "react-google-maps": "~9.4.5",
+    "react-places-autocomplete": "~7.2.1",
+    "react-redux": "~7.1.0",
+    "react-router-dom": "~5.0.1",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "styled-components": "^4.3.2",
-    "yup": "^0.27.0"
+    "redux": "~4.0.1",
+    "redux-logger": "~3.0.6",
+    "redux-thunk": "~2.3.0",
+    "reselect": "~4.0.0",
+    "styled-components": "~4.3.2",
+    "yup": "~0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,13 +51,13 @@
     ]
   },
   "devDependencies": {
-    "@storybook/react": "^5.1.9",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
-    "prettier": "^1.18.2"
+    "@storybook/react": "~5.1.9",
+    "eslint-config-airbnb": "~17.1.1",
+    "eslint-config-prettier": "~6.0.0",
+    "eslint-plugin-import": "~2.18.0",
+    "eslint-plugin-jsx-a11y": "~6.2.3",
+    "eslint-plugin-prettier": "~3.1.0",
+    "eslint-plugin-react": "~7.14.2",
+    "prettier": "~1.18.2"
   }
 }
