--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
     <<: *defaults
     environment:
       - AWS_BUCKET: AWS_BUCKET
+      - AWS_DEFAULT_REGION: AWS_DEFAULT_REGION
     steps:
       - attach_workspace:
           at: ~/repo
@@ -74,7 +75,8 @@ jobs:
       - run:
           name: 'Deploy to S3'
           command: |
-            aws s3 sync dist/ s3://${AWS_BUCKET} --delete
+            source scripts/assume-role.sh
+            aws s3 sync dist/ s3://${AWS_BUCKET} --delete --region ${AWS_DEFAULT_REGION}
 
 workflows:
   version: 2
