--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,9 @@ jobs:
           name: 'Deploy to S3'
           command: |
             export ACCOUNT_ID=159220020591
+            chmod +x scripts/assume-role.sh
             source scripts/assume-role.sh
-            aws s3 sync dist/ s3://$AWS_BUCKET --delete --region $AWS_DEFAULT_REGION
+            aws s3 sync dist/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
 workflows:
   version: 2
