--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,8 +72,9 @@ jobs:
       - run:
           name: 'Deploy to S3'
           command: |
+            . venv/bin/activate
             export ACCOUNT_ID=159220020591
-            sudo chmod +x ./scripts/assume-role.sh
+            chmod +x ./scripts/assume-role.sh
             source ./scripts/assume-role.sh
             aws s3 sync dist/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
