--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
       - persist_to_workspace:
           root: ~/repo
           paths:
-            - dist
+            - build
             - package.json
   deploy:
     <<: *defaults
@@ -72,7 +72,7 @@ jobs:
           command: |
             export ACCOUNT_ID=159220020591
             source ./scripts/assume-role.sh
-            aws s3 sync dist/ s3://$AWS_BUCKET --delete --region $AWS_REGION
+            aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
 workflows:
   version: 2
