--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,16 @@ jobs:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
+          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
+      - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: 'Yarn install'
           command: yarn
+      - save_cache:
+          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
+          paths:
+            - ~/.cache/yarn
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
@@ -43,26 +49,13 @@ jobs:
   #     - run:
   #         name: 'Test'
   #         command: npm run test
-  scripts:
-    <<: *defaults
-    steps:
-      - restore_cache:
-          key: source-{{ .Branch }}-{{ .Revision }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: 'Copy scripts'
-          command: |
-            cp -v ./scripts ./scripts
-      - persist_to_workspace:
-          root: ~/repo
-          paths:
-            - scripts
   build:
     <<: *defaults
     steps:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
@@ -86,7 +79,8 @@ jobs:
           name: 'Deploy to S3'
           command: |
             export ACCOUNT_ID=159220020591
-            source ./scripts/assume-role.sh
+            chmod +x scripts/assume-role.sh
+            source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
 workflows:
@@ -100,12 +94,9 @@ workflows:
       # - test:
       #     requires:
       #       - install
-      - scripts:
-          requires:
-            - install
       - build:
           requires:
-            - scripts
+            - install
       - deploy:
           requires:
             # - test
