--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ jobs:
           root: ~/repo
           paths:
             - build
+            - scripts
             - package.json
   deploy:
     <<: *defaults
@@ -79,7 +80,7 @@ jobs:
           name: 'Deploy to S3'
           command: |
             export ACCOUNT_ID=159220020591
-            chmod +x scripts/assume-role.sh
+            sudo chmod +x scripts/assume-role.sh
             source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
