--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
       - run:
           name: 'Deploy to S3'
           command: |
-            sudo chmod +x scripts/assume-role.sh
+            chmod +x scripts/assume-role.sh
             source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
