--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
             export ACCOUNT_ID=159220020591
             sudo chmod +x scripts/assume-role.sh
             source scripts/assume-role.sh
-            aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
+            # aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
 
 workflows:
   version: 2
