account id as a number

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
       - run:
           name: 'Deploy to S3'
           command: |
-            export ACCOUNT_ID="${ACCOUNT_ID}"
+            export ACCOUNT_ID=${ACCOUNT_ID}
             source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
             aws cloudfront create-invalidation --distribution-id "${DISTRIBUTION_ID}" --paths /index.html
