--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@styled-system/prop-types": "^5.0.15",
     "apollo-boost": "^0.4.3",
     "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
@@ -18,6 +19,7 @@
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
+    "react-images": "^1.0.0",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
@@ -27,6 +29,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
+    "styled-system": "^5.0.15",
     "yup": "^0.27.0"
   },
   "scripts": {
