adding variable on react

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,6 @@ jobs:
             - package.json
   deploy:
     <<: *defaults
-    environment:
-      REACT_APP_GOOGLE_MAPS_KEY: ${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
-      REACT_APP_GRAPH_HOST: ${SANDPIT_REACT_APP_GRAPH_HOST}
     steps:
       - attach_workspace:
           at: ~/repo
@@ -84,8 +81,8 @@ jobs:
       - run:
           name: 'Deploy to S3'
           command: |
-            export REACT_APP_GOOGLE_MAPS_KEY=$REACT_APP_GOOGLE_MAPS_KEY
-            export REACT_APP_GRAPH_HOST=$REACT_APP_GRAPH_HOST
+            export REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
+            export REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST}
             export ACCOUNT_ID=159220020591
             source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
