adding REACT APP LEGACY

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,7 @@ jobs:
           command: |
             export REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
             export REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST}
+            export REACT_APP_LEGACY=${SANDPIT_REACT_APP_LEGACY}
             export ACCOUNT_ID=159220020591
             source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
