--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,9 +81,9 @@ jobs:
       - run:
           name: 'Deploy to S3'
           command: |
-            export REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
-            export REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST}
-            export REACT_APP_LEGACY=${SANDPIT_REACT_APP_LEGACY}
+            export REACT_APP_GOOGLE_MAPS_KEY=AIzaSyDn3TUN5deolyjfXTMt5-9BaDpBtwN1bIc
+            export REACT_APP_GRAPH_HOST=https://graphql-spacenow.sandpit.cloud.spacenow.com/graphql
+            export REACT_APP_LEGACY=https://spacenow.sandpit.cloud.spacenow.com/
             export ACCOUNT_ID=159220020591
             source scripts/assume-role.sh
             aws s3 sync build/ s3://$AWS_BUCKET --delete --region $AWS_REGION
