--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,8 +62,9 @@ jobs:
           name: 'Build app'
           command: yarn build
           environment:
-            REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY} REACT_APP_LEGACY=${SANDPIT_REACT_APP_LEGACY}
-            REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST}
+            REACT_APP_GOOGLE_MAPS_KEY: ${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
+            REACT_APP_LEGACY: ${SANDPIT_REACT_APP_LEGACY}
+            REACT_APP_GRAPH_HOST: ${SANDPIT_REACT_APP_GRAPH_HOST}
       - persist_to_workspace:
           root: ~/repo
           paths:
