--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,11 +51,6 @@ jobs:
   #         command: npm run test
   build:
     <<: *defaults
-    environment:
-      REACT_APP_GOOGLE_MAPS_KEY: ${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
-      REACT_APP_LEGACY: ${SANDPIT_REACT_APP_LEGACY}
-      REACT_APP_GRAPH_HOST: ${SANDPIT_REACT_APP_GRAPH_HOST}
-      REACT_APP_ENV: production
     steps:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
@@ -66,8 +61,8 @@ jobs:
       - run:
           name: 'Build app'
           command:
-            REACT_APP_ENV=$REACT_APP_ENV REACT_APP_GOOGLE_MAPS_KEY=$REACT_APP_GOOGLE_MAPS_KEY
-            REACT_APP_LEGACY=$REACT_APP_LEGACY REACT_APP_GRAPH_HOST=$REACT_APP_GRAPH_HOST yarn build
+            REACT_APP_ENV=production REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
+            REACT_APP_LEGACY=${SANDPIT_REACT_APP_LEGACY} REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST} yarn build
       - persist_to_workspace:
           root: ~/repo
           paths:
