--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.15",
+    "numeral": "^2.0.6",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "rc-time-picker": "^3.7.1",
