--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-ENV=
-PORT=
-GOOGLE_MAPS_KEY=
+PORT=3003
+NODE_ENV=development
+REACT_APP_GOOGLE_MAPS_KEY=
+REACT_APP_GRAPH_HOST=
+REACT_APP_LEGACY=
