--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "date-fns": "^1.30.1",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
+    "immutability-helper": "^3.0.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.15",
     "numeral": "^2.0.6",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "rc-time-picker": "^3.7.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -26,6 +26,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-simple-timefield": "^2.0.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
