--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.6",
     "react-google-maps": "^9.4.5",
     "react-images": "^1.0.0",
     "react-places-autocomplete": "^7.2.1",
@@ -39,7 +40,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "svg": "node ./scripts/remove_style_svg_icons.js"
   },
   "eslintConfig": {
     "extends": "react-app"
