disabled eslint rule to hooks

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
     // "import/newline-after-import": "error",
     // "comma-dangle": [2, "always-multiline"],
     "semi": ["error", "never"],
-    "react/require-default-props": 0
+    "react/require-default-props": 0,
+    "react-hooks/exhaustive-deps": 0
   },
   "globals": {
     "window": true,
