--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
       - run: aws --version
       - run: aws s3 ls
       - run:
-          name: 'Deploy to S3'
+          name: 'Deploy to S3 DEV'
           command: |
             export ACCOUNT_ID=159220020591
             source scripts/assume-role.sh
@@ -119,10 +119,11 @@ jobs:
       - run: aws --version
       - run: aws s3 ls
       - run:
-          name: 'Deploy to S3'
+          name: 'Deploy to S3 QA'
           command: |
             export ACCOUNT_ID=211853473677
             source scripts/assume-role.sh
+            aws s3 ls
             aws s3 sync build/ s3://${NONPROD_AWS_BUCKET} --delete --region $AWS_REGION
             aws cloudfront create-invalidation --distribution-id "E8T1Z3NYNLEPU" --paths /index.html
   build-prod:
@@ -157,7 +158,7 @@ jobs:
       - run: aws --version
       - run: aws s3 ls
       - run:
-          name: 'Deploy to S3'
+          name: 'Deploy to S3 PROD'
           command: |
             export ACCOUNT_ID=985566274543
             source scripts/assume-role.sh
