--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,14 @@ defaults: &defaults
   working_directory: ~/repo
   docker:
     - image: circleci/node:10.16.0
+aws-install: &aws-install
+  - attach_workspace:
+      at: ~/repo
+  - run: sudo apt-get update && sudo apt-get install -y python-dev
+  - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+  - run: sudo python get-pip.py
+  - run: sudo pip install awscli --upgrade
+  - run: aws --version
 version: 2
 jobs:
   checkout_code:
@@ -72,13 +80,7 @@ jobs:
   deploy:
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/repo
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
+      <<: *aws-install
       - run:
           name: 'SETUP ACCOUNT'
           command: |
@@ -113,13 +115,7 @@ jobs:
   deploy-qa:
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/repo
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
+      <<: *aws-install
       - run:
           name: 'SETUP ACCOUNT'
           command: |
@@ -154,13 +150,7 @@ jobs:
   deploy-prod:
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/repo
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
+      <<: *aws-install
       - run:
           name: 'SETUP ACCOUNT'
           command: |
