--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,8 +80,20 @@ jobs:
             - package.json
   deploy:
     <<: *defaults
-    <<: *aws_install
     steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: 'INSTALL PIP'
+          command: |
+            sudo apt-get update && sudo apt-get install -y python-dev
+            sudo curl -O https://bootstrap.pypa.io/get-pip.py
+            sudo python get-pip.py
+      - run:
+          name: 'INSTALL AWS CLI'
+          command: |
+            sudo pip install awscli --upgrade
+            aws --version
       - run:
           name: 'SETUP ACCOUNT'
           command: |
@@ -115,8 +127,20 @@ jobs:
             - package.json
   deploy-qa:
     <<: *defaults
-    <<: *aws_install
     steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: 'INSTALL PIP'
+          command: |
+            sudo apt-get update && sudo apt-get install -y python-dev
+            sudo curl -O https://bootstrap.pypa.io/get-pip.py
+            sudo python get-pip.py
+      - run:
+          name: 'INSTALL AWS CLI'
+          command: |
+            sudo pip install awscli --upgrade
+            aws --version
       - run:
           name: 'SETUP ACCOUNT'
           command: |
@@ -150,8 +174,20 @@ jobs:
             - package.json
   deploy-prod:
     <<: *defaults
-    <<: *aws_install
     steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: 'INSTALL PIP'
+          command: |
+            sudo apt-get update && sudo apt-get install -y python-dev
+            sudo curl -O https://bootstrap.pypa.io/get-pip.py
+            sudo python get-pip.py
+      - run:
+          name: 'INSTALL AWS CLI'
+          command: |
+            sudo pip install awscli --upgrade
+            aws --version
       - run:
           name: 'SETUP ACCOUNT'
           command: |
