--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-simple-timefield": "^2.0.3",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
