--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
       - run:
           name: 'SETUP ACCOUNT'
           command: |
+            export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+            export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
             export ACCOUNT_ID=159220020591
             source scripts/assume-role.sh
       - run:
