--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,10 +76,13 @@ jobs:
             sudo pip install awscli --upgrade
             aws --version
       - run:
+          name: SETUP ENVIRONMENT VARIABLES
+          command: |
+            echo 'export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}"' >> $BASH_ENV
+            echo 'export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"' >> $BASH_ENV
+      - run:
           name: 'SETUP ACCOUNT'
           command: |
-            export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-            export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
             export ACCOUNT_ID=159220020591
             source scripts/assume-role.sh
       - run:
