prod cloud front

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,7 +191,7 @@ jobs:
           command: |
             aws s3 ls
             aws s3 sync build/ s3://${PROD_AWS_BUCKET} --delete --region $AWS_REGION
-            aws cloudfront create-invalidation --distribution-id "EJBM66ARV7ZA9" --paths /index.html
+            aws cloudfront create-invalidation --distribution-id "E2YJX6D1PVADY" --paths /index.html
 
 workflows:
   version: 2
