--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@styled-system/prop-types": "^5.0.15",
     "apollo-boost": "^0.4.3",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.15",
+    "apollo-upload-client": "^11.0.0",
     "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
     "formik": "^1.5.7",
