--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.6",
     "react-google-maps": "^9.4.5",
+    "react-helmet": "^5.2.1",
     "react-images": "^1.0.0",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.0",
