deploy only master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,10 @@ workflows:
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - master
       - qa-approval:
           type: approval
           requires:
