--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,6 +190,10 @@ workflows:
   build_and_test:
     jobs:
       - checkout_code
+          filters:
+              branches:
+                only:
+                  - master
       - install:
           requires:
             - checkout_code
