--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     // "comma-dangle": [2, "always-multiline"],
     "semi": ["error", "never"],
     "react/require-default-props": 0,
-    "react-hooks/exhaustive-deps": 0
+    "react-hooks/exhaustive-deps": 0,
+    "import/no-cycle": 0
   },
   "globals": {
     "window": true,
