--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "PORT=3003 react-scripts start",
+    "build": "PORT=3003 react-scripts build",
+    "test": "PORT=3003 react-scripts test",
+    "eject": "PORT=3003 react-scripts eject",
     "storybook": "start-storybook",
     "svg": "node ./scripts/remove_style_svg_icons.js"
   },
