--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,7 +135,7 @@ jobs:
           command: |
             aws s3 ls
             aws s3 sync build/ s3://${NONPROD_AWS_BUCKET} --delete --region $AWS_REGION
-            aws cloudfront create-invalidation --distribution-id "E8T1Z3NYNLEPU" --paths /index.html
+            aws cloudfront create-invalidation --distribution-id "E2PH044Z59L61F" --paths /index.html
   build-prod:
     <<: *defaults
     steps:
@@ -183,7 +183,7 @@ jobs:
           command: |
             aws s3 ls
             aws s3 sync build/ s3://${PROD_AWS_BUCKET} --delete --region $AWS_REGION
-            aws cloudfront create-invalidation --distribution-id "E2YJX6D1PVADY" --paths /index.html
+            aws cloudfront create-invalidation --distribution-id "E2Z53407YRL063" --paths /index.html
 
 workflows:
   version: 2
