--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-images": "^1.0.0",
+    "react-modal-video": "^1.2.2",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
