--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "HTTPS=true PORT=3003 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
