--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-images": "^1.0.0",
     "react-modal-video": "^1.2.2",
     "react-places-autocomplete": "^7.2.1",
+    "react-popper": "^1.3.4",
     "react-pose": "^4.0.8",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
