--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-bootstrap": "^1.0.0-beta.9",
