--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-http": "^1.5.15",
     "apollo-upload-client": "^11.0.0",
     "bootstrap": "^4.3.1",
+    "card-validator": "^6.2.0",
     "date-fns": "^1.30.1",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
@@ -24,6 +25,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-credit-cards": "^0.7.0",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.6",
