--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "apollo-upload-client": "^11.0.0",
     "bootstrap": "^4.3.1",
     "card-validator": "^6.2.0",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.1.0",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
     "immutability-helper": "^3.0.1",
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
+    "react-addons-update": "^15.6.2",
     "react-apollo": "^2.5.8",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-credit-cards": "^0.7.0",
