--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           command:
             REACT_APP_ENV=production REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
             GENERATE_SOURCEMAP=false INLINE_RUNTIME_CHUNK=false REACT_APP_LEGACY=${SANDPIT_REACT_APP_LEGACY}
-            REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST} yarn build
+            REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST} REACT_APP_STATIC_PAGES=https://spacenow.wpengine.com yarn build
       - persist_to_workspace:
           root: ~/repo
           paths:
@@ -102,7 +102,7 @@ jobs:
           command:
             REACT_APP_ENV=production REACT_APP_GOOGLE_MAPS_KEY=${PROD_REACT_APP_GOOGLE_MAPS_KEY}
             GENERATE_SOURCEMAP=false INLINE_RUNTIME_CHUNK=false REACT_APP_LEGACY=${PROD_REACT_APP_LEGACY}
-            REACT_APP_GRAPH_HOST=${PROD_REACT_APP_GRAPH_HOST} yarn build
+            REACT_APP_GRAPH_HOST=${PROD_REACT_APP_GRAPH_HOST} REACT_APP_STATIC_PAGES=https://spacenow.com yarn build
       - persist_to_workspace:
           root: ~/repo
           paths:
